--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,8 @@ run all Odoo tests:
     - cd ~/src/$ODOO_WORKTREE
     - git fetch --all
     - git clean -fdx
-    - git checkout $CI_COMMIT_REF_NAME
+    - git pull
+    - git checkout $CI_COMMIT_SHA
     - mkdir -p ~/virtualenvs
     - rm -rf ~/virtualenvs/$CI_PROJECT_NAME-$ODOO_WORKTREE || true
     - virtualenv -p `which $PYTHON` ~/virtualenvs/$CI_PROJECT_NAME-$ODOO_WORKTREE
